test/files/neg/accesses.check
accesses.scala:23: error: overriding private[package p2] def f2(): Unit (defined in class A);
 private def f2(): Unit has weaker access privileges; it should not be private
  private def f2(): Unit = ()
              ^
accesses.scala:24: error: overriding protected def f3(): Unit (defined in class A);
 private[package p2] def f3(): Unit has weaker access privileges; it should be at least protected
  private[p2] def f3(): Unit = ()
                  ^
accesses.scala:25: error: overriding private[package p1] def f4(): Unit (defined in class A);
 private[package p2] def f4(): Unit has weaker access privileges; it should be at least private[p1]
  private[p2] def f4(): Unit
                  ^
accesses.scala:26: error: overriding protected[package p1] def f5(): Unit (defined in class A);
 protected[package p2] def f5(): Unit has weaker access privileges; it should be at least protected[p1]
  protected[p2] def f5(): Unit
                    ^
four errors found
